# Kalimorfia

./: .gitignore  .vimspector.json  Cargo.toml  README.md  example.json  gk.json  inter.json  model.json
gen-paths/: 1.k16  2.f10  3.k08  4.k01
shaders/: fragment_cnc_block.glsl  fragment_colored.glsl  fragment_colored_trimmed.glsl  fragment_gk.glsl  geometry_bezier.glsl  gk_tesselation_control.glsl  gk_tesselation_evaluation.glsl  gregory_tesselation_control.glsl  gregory_tesselation_evaluation.glsl  perspective_vertex.glsl  perspective_vertex_colored.glsl  perspective_vertex_uniform_color.glsl  point_cloud_vertex.glsl  simple_fragment.glsl  simple_vertex.glsl  surface_tesselation_control.glsl  surface_tesselation_evaluation.glsl  torus_vertex.glsl  uniform_fragment.glsl  vertex_bezier.glsl  vertex_cnc_block.glsl  vertex_gk.glsl
src/: camera.rs  constants.rs  graph.rs  json.rs  lib.rs  main.rs  main_control.rs  mouse.rs  path_gen_ui.rs  repositories.rs  scene.rs  shaders.rs  state.rs  utils.rs  window.rs
src/cnc/: block.rs  location.rs  mill.rs  milling_player.rs  milling_process.rs  mod.rs  number.rs  parser.rs  program.rs
src/entities/: aggregate.rs  basic.rs  bezier_surface_args.rs  bezier_surface_c0.rs  bezier_surface_c2.rs  bezier_utils.rs  changeable_name.rs  cnc_block.rs  cubic_spline_c0.rs  cubic_spline_c2.rs  cursor.rs  entity.rs  gregory_patch.rs  interpolating_spline.rs  intersection.rs  intersection_curve.rs  manager.rs  mod.rs  point.rs  scene_grid.rs  screen_coordinates.rs  torus.rs  transformer.rs  (+1 more)
textures/: diffuse.dds  height.dds  normals.dds
(+56 files in other folders)
