[package]
name = "kalimorfia"
version = "0.1.0"
edition = "2021"

[dependencies]
# OpenGL + Window management
glow = "0.10.0"
imgui = "0.10.0"
num-traits = "0.2.15"
imgui-glow-renderer = "0.10.0"
imgui-winit-support = "0.10.0"
glutin = "0.29.1"
# Linear algebra
nalgebra-glm = "0.18.0"
nalgebra = "0.32.2"
