[package]
name = "kalimorfia"
version = "0.1.0"
edition = "2021"

[dependencies]
# OpenGL + Window management
glow = "0.10.0"
imgui = "0.10.0"
num-traits = "0.2.15"
imgui-glow-renderer = "0.10.0"
imgui-winit-support = "0.10.0"
glutin = "0.29.1"
# Linear algebra
nalgebra-glm = "0.18.0"
nalgebra = "0.32.2"
# Serialization
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
# Others
rayon = "1.7.0"
itertools = "0.10.5"
rand = "0.8.5"
image = "0.24.6"
thiserror = "1.0.49"
# Kd-trees
kiddo = "2.1.2"
